src/components/xcloud/FileCommander.css
#FileCommander {
    margin-top: 20px;
    max-width: 1440px;
    margin-left: auto;
    margin-right: auto;
}

#FileCommander-info {
    display: flex;
    justify-content: center;
    padding: 0 20px;
}

#FileCommander-path {
    font-size: 18px;
    font-weight: 600;
    display: inline;
    margin: auto;
}

#FileCommander-backTo {
    font-size: 20px;
    font-weight: bold;
    display: inline;
    cursor: pointer;
}

#FileCommander-items {
    display: flex;
    margin-top: 20px;
    padding: 0px 38px;
    border-top: solid 1px #f2f2f2;
    flex-wrap: wrap;
}

.noItems {
    justify-content: center;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    height: 50vh;
}

#FileCommander-path .btn {
    background-color: #ffffff;
    color: #000000;
    box-shadow: none;
    border-style: none;
    font-weight: 600;
    font-size: 18px;
}

#FileCommander-path .dropdown-toggle::after {
    content: none;
}

#FileCommander-path .dropdown-toggle img {
    visibility: hidden;
    margin-left: 5px;
}

#FileCommander-path :hover .dropdown-toggle img {
    visibility: visible;
}

#FileCommander-path .dropdown-menu {
    min-width: 200px;
    left: -35px !important;
    border-radius: 14px;
    border-style: none;
    box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.16);
}

#FileCommander-path .dropdown-item {
    margin: 15px -5px 20px 20px;
    font-size: 15px;
    font-weight: 500;
    padding-left: 0px;
}

#FileCommander-path .dropdown-item.active {
    background: none;
    color: #0054ff;
} 

#FileCommander-path .dropdown-item:first-child {
    margin-top: 5px;
} 

#FileCommander-path .dropdown-item:last-child {
    margin-bottom: 5px;
}

